--- a/style.css
+++ b/style.css
@@ -10,12 +10,25 @@ Tags:
 
 /* Begin Typography & Colors */
 
-#main { background: url('background.png'); padding-top: 30px; }
+body { padding-top: 30px; background: url('background.png'); }
+
+.navbar .brand,.navbar .nav > li > a { padding: 8px 10px 0px 10px; }
+.navbar-inner { min-height:16px; }
+.navbar .navbar-inner .brand { margin-top: 0px; }
+.widget .navbar .navbar-inner .nav .dropdown a { margin-top: 0px; }
+.widget .navbar .navbar-inner a.btn { margin-top: 2px; }
+h1.navbar-brand { margin: 0px; padding: 5px 25px 5px 25px; }
+h1.navbar-brand a { color: #fff; }
+.navbar-default { background: url('background.png'); }
+.navbar-header { background: rgba(0,0,0,0.75); }
+
+#main .container { padding-top: 30px; }
 
 article.col-md-4 { margin-bottom: 30px; }
-article .title { background: rgba(0,0,0,0.75); color: #fff; display: block; width: 100%; font-size: 12pt; height: 22px; margin: 0px; padding: 1.5% 1.5% 1.5% 1.5%; }
-article .content { background: rgba(0,0,0,0.75); position: relative; width: 100%; padding: 0px 1.5% 1.5% 1.5%; }
+article .title { border-top-right-radius: 5px; border-top-left-radius: 5px; background: rgba(0,0,0,0.75); color: #fff; display: block; width: 100%; font-size: 12pt; height: 22px; margin: 0px; padding: 1.5% 1.5% 1.5% 1.5%; }
+article .content { border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; background: rgba(0,0,0,0.75); position: relative; width: 100%; padding: 0px 1.5% 1.5% 1.5%; }
 article .content img:first-child { width: 100%; min-height: 275px; }
 
-footer { text-align: center; }
+footer { text-align: center; margin-bottom: 15px; }
+
 .clear { clear: both; }
