--- a/style.css
+++ b/style.css
@@ -18,23 +18,23 @@ body { padding-top: 30px; background: url('background.png'); }
 .widget .navbar .navbar-inner .nav .dropdown a { margin-top: 0px; }
 .widget .navbar .navbar-inner a.btn { margin-top: 2px; }
 h1.navbar-brand { margin: 0px; padding: 5px 25px 5px 25px; }
-h1.navbar-brand a { color: #fff; }
+h1.navbar-brand a { color: #fff; font-family: 'Allan', cursive; font-weight: bold; }
 .navbar-default { background: transparent; border-color: transparent; }
 .navbar-header { background: rgba(0,0,0,0.75); }
 
 #main .container { padding-top: 30px; }
 
 article.col-md-4 { margin-bottom: 30px; }
-article .title { border-top-right-radius: 5px; border-top-left-radius: 5px; background: rgba(0,0,0,0.75); display: block; width: 100%; font-size: 12pt; height: 22px; margin: 0px; padding: 0% 1.5% 1.5% 1.5%; }
-article .title,article .title a { color: #fff; }
+article .title { border-top-right-radius: 5px; border-top-left-radius: 5px; background: rgba(0,0,0,0.75); display: block; width: 100%; font-size: 12pt; height: 18px; margin: 0px; padding: 0% 1.5% 1.5% 1.5%; }
+article .title,article .title a { color: #fff; font-family: 'Pompiere', cursive; }
 article .content { border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; background: rgba(0,0,0,0.75); position: relative; width: 100%; }
 article.col-md-4 .content { padding: 0px 1.5% 1.5% 1.5%; }
 article.single .content { padding: 0px 1.5% 20px 1.5%; }
 article .content img:first-child { width: 100%; min-height: 275px; height: 100%; }
-article .tags { position: relative; top: -18px; width: 100%; color: #fff; padding: 0% 1.5%; }
-article .tags a { color: #fff; font-weight: bold; }
+article .tags { position: relative; top: -20px; width: 100%; color: #fff; padding: 0% 1.5%; font-family: 'Montserrat Alternates', sans-serif; }
+article .tags a { color: #fff; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
 
-footer { text-align: center; margin-bottom: 15px; }
-footer a { color: #000; font-weight: bold; }
+footer { text-align: center; margin-bottom: 15px; font-family: 'Allan', cursive; }
+footer a { color: #000; font-weight: bold; font-family: 'Allan', cursive; }
 
 .clear { clear: both; }
