--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /*
 Theme Name: Insta365
 Description: Wordpress theme for 365 project
-Version: 0.2
+Version: 0.3
 Author: Pavel Dostál
 Author URI: http://pdostal.cz/
 Tags: 
@@ -17,22 +17,25 @@ body { padding-top: 30px; background: url('background.png'); }
 .navbar .navbar-inner .brand { margin-top: 0px; }
 .widget .navbar .navbar-inner .nav .dropdown a { margin-top: 0px; }
 .widget .navbar .navbar-inner a.btn { margin-top: 2px; }
-h1.navbar-brand { margin: 0px; padding: 5px 25px 5px 25px; }
+header .navbar-brand { margin: 0px; padding: 5px 25px 5px 25px; }
+header .navbar-text.navbar-right { color: #fff; font-family: 'Allan', cursive; margin: 0px; padding: 5px 15px 5px 25px; }
+@media (max-width: 767px) { header .navbar-text.navbar-right { display: none; } }
 h1.navbar-brand a { color: #fff; font-family: 'Allan', cursive; font-weight: bold; }
+.navbar-header,.navbar-right { background: rgba(0,0,0,0.75); }
 .navbar-default { background: transparent; border-color: transparent; }
-.navbar-header { background: rgba(0,0,0,0.75); }
 
 #main .container { padding-top: 30px; }
 
 article.col-md-4 { margin-bottom: 30px; }
 article .title { border-top-right-radius: 5px; border-top-left-radius: 5px; background: rgba(0,0,0,0.75); display: block; width: 100%; font-size: 12pt; height: 18px; margin: 0px; padding: 0% 1.5% 1.5% 1.5%; }
-article .title,article .title a { color: #fff; font-family: 'Pompiere', cursive; }
+article .title,article .title a { color: #fff; font-family: 'Montserrat Alternates', sans-serif; }
 article .content { border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; background: rgba(0,0,0,0.75); position: relative; width: 100%; }
 article.col-md-4 .content { padding: 0px 1.5% 1.5% 1.5%; }
 article.single .content { padding: 0px 1.5% 20px 1.5%; }
 article .content img:first-child { width: 100%; min-height: 275px; height: 100%; }
 article .tags { position: relative; top: -20px; width: 100%; color: #fff; padding: 0% 1.5%; font-family: 'Montserrat Alternates', sans-serif; }
 article .tags a { color: #fff; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
+article .text { padding: 7.5px 7.5px 7.5px 10px; position: relative; top: -15px; border-radius: 5px; background: rgba(0,0,0,0.75); color: #fff; margin-bottom: 15px; }
 
 footer { text-align: center; margin-bottom: 15px; font-family: 'Allan', cursive; }
 footer a { color: #000; font-weight: bold; font-family: 'Allan', cursive; }
