--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ article.single .content { padding: 0px 5px 20px 5px; }
 article .content img:first-child { width: 100%; min-height: 275px; height: 100%; }
 article .tags { position: relative; top: -20px; width: 100%; color: #fff; padding: 0% 1.5%; font-family: 'Montserrat Alternates', sans-serif; }
 article .tags a { color: #fff; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
-article .text { padding: 7.5px 7.5px 7.5px 10px; position: relative; top: -15px; border-radius: 5px; background: rgba(0,0,0,0.75); color: #fff; margin-bottom: 15px; }
+article .text { position: absolute; bottom: 5px; color: #fff; width: 100%; padding-right: 10px; background: rgba(0,0,0,0.5); background-clip: content-box; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
 
 footer { text-align: center; margin-bottom: 15px; font-family: 'Allan', cursive; }
 footer a { color: #000; font-weight: bold; font-family: 'Allan', cursive; }
