--- a/style.css
+++ b/style.css
@@ -36,9 +36,13 @@ article.single .content { padding: 0px 5px 20px 5px; }
 article .content img:first-child { width: 100%; min-height: 275px; height: 100%; }
 article .tags { position: relative; top: -20px; width: 100%; color: #fff; padding: 0% 1.5%; font-family: 'Montserrat Alternates', sans-serif; }
 article .tags a { color: #fff; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
-article .text { color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; position: absolute; bottom: 5px; width: 100%; padding-right: 10px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
-article.col-md-4 .text { color: rgba(0,0,0,0); background: rgba(0,0,0,0); }
-article.col-md-4 .text.textclicked,article.col-md-4 .text.textmouse,article.col-md-4 .text.textsize { color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; }
+article .text { position: absolute; bottom: 5px; width: 100%; height: 75%; padding-right: 10px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
+article.single .text { bottom: 20px; }
+article .text p { color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; margin: 0px; position: absolute; bottom: 0px; padding-right: 10px; }
+article.col-md-4 .text p { color: rgba(0,0,0,0); background: rgba(0,0,0,0); }
+article.col-md-4 .textclose { position: absolute; bottom: -20px; right: 10px; color: #fff; background: rgba(0,0,0,0.75); border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 0px 5px; }
+article .single .textclose { display: none; }
+article.col-md-4 .text .textclicked,article.col-md-4 .text .textmouse,article.col-md-4 .text .textsize { color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; }
 
 footer { text-align: center; margin-bottom: 15px; font-family: 'Allan', cursive; }
 footer a { color: #000; font-weight: bold; font-family: 'Allan', cursive; }
