--- a/style.css
+++ b/style.css
@@ -26,26 +26,20 @@ h1.navbar-brand a { color: #fff; font-family: 'Allan', cursive; font-weight: bol
 
 #main .container { padding-top: 30px; }
 
-article.single { /*max-width: 400px;*/ margin-bottom: 25px; }
-article.col-md-4 { margin-bottom: 30px; }
-article .title { border-top-right-radius: 5px; border-top-left-radius: 5px; background: rgba(0,0,0,0.75); display: block; width: 100%; font-size: 12pt; height: 18px; margin: 0px; padding: 0% 1.5% 1.5% 1.5%; }
-article .title,article .title a { color: #fff; font-family: 'Montserrat Alternates', sans-serif; }
-article .content { border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; background: rgba(0,0,0,0.75); position: relative; width: 100%; }
-article.col-md-4 .content { padding: 0px 5px 5px 5px; }
-article.single .content { padding: 0px 5px 5px 5px; }
+article { margin-bottom: 30px; }
+article .title { border-top-right-radius: 5px; border-top-left-radius: 5px; background: rgba(0,0,0,0.75); display: block; width: 100%; font-size: 12pt; height: 18px; margin: 0px; padding: 0% 1.5% 1.5% 1.5%; color: #fff; font-family: 'Montserrat Alternates', sans-serif; }
+article .content { border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; background: rgba(0,0,0,0.75); position: relative; width: 100%; padding: 0px 5px 5px 5px; }
 article .content img:first-child { width: 100%; min-height: 275px; height: 100%; }
-article .tags { position: relative; top: -20px; width: 100%; color: #fff; padding: 0% 1.5%; font-family: 'Montserrat Alternates', sans-serif; }
-article .tags a { color: #fff; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
-article .text { position: absolute; bottom: 5px; width: 100%; height: 100%; padding-right: 10px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
-article .text p { color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; margin: 0px; position: absolute; bottom: 0px; padding-right: 10px; }
-article.col-md-4 .text p { color: rgba(0,0,0,0); background: rgba(0,0,0,0); }
-article.col-md-4 .textclose { position: absolute; bottom: -20px; right: 10px; color: #fff; background: rgba(0,0,0,0.75); border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 0px 5px; }
-article.single .textclose { display: none; }
-article .text .textlightbox { display: none; bottom: -25px; position: absolute; background: rgba(0,0,0,0.75); border-top-color: rgba(0,0,0,0); border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 5px 5px 0px 5px; }
-article .text .textlightbox a { color: #fff; text-decoration: none; }
-article.col-md-4 .text .textclicked .textlightbox,article.col-md-4 .text .textmouse .textlightbox { display: block; }
-article.col-md-4 .text .textclicked,article.col-md-4 .text .textmouse,article.col-md-4 .text .textsize { color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; }
-article.col-md-4 .text .textclicked .textlightbox.disablelightbox,article.col-md-4 .text .textmouse .textlightbox.disablelightbox,article.col-md-4 .text .textlightbox.disablelightbox { display: none; }
+
+article .desc { position: absolute; bottom: 5px; width: 100%; height: 100%; padding-right: 10px; border-radius: 5px; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
+article .textdesc { display: none; color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; margin: 0px; position: absolute; bottom: 0px; padding-right: 10px; }
+article .textclose a { display: none; position: absolute; bottom: -20px; right: 10px; color: #fff; background: rgba(0,0,0,0.75); border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 0px 5px; font-family: 'Montserrat Alternates', sans-serif; }
+article .textlightbox a { display: none; bottom: -25px; position: absolute; background: rgba(0,0,0,0.75); border-top-color: rgba(0,0,0,0); border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 5px 5px 0px 5px; color: #fff; text-decoration: none; }
+
+article .textdesc.mouse,article .textlightbox.mouse a { display: block; }
+article .textdesc.clicked,article .textclose.clicked a,article .textlightbox.clicked a { display: block; }
+article .textdesc.size { display: block; }
+article .textclose.size a,article .textlightbox.size a { display: none; }
 
 footer { text-align: center; margin-bottom: 15px; font-family: 'Allan', cursive; }
 footer a { color: #000; font-weight: bold; font-family: 'Allan', cursive; }
