--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ article .title { border-top-right-radius: 5px; border-top-left-radius: 5px; back
 article .content { border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; background: rgba(0,0,0,0.75); position: relative; width: 100%; padding: 0px 5px 5px 5px; }
 article .content img:first-child { width: 100%; min-height: 275px; height: 100%; }
 
+.nextpage { width: 65px; color: #fff; background: rgba(0,0,0,0.75); padding: 0px 2.5px; border-radius: 5px; margin: 0px auto; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; position: relative; top: -15px; }
+
 article .desc { position: absolute; bottom: 5px; width: 100%; height: 100%; padding-right: 10px; border-radius: 5px; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
 article .textdesc { display: none; color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; margin: 0px; position: absolute; bottom: 0px; padding-right: 10px; }
 article .textclose a { display: none; position: absolute; bottom: -20px; right: 10px; color: #fff; background: rgba(0,0,0,0.75); border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 0px 5px; font-family: 'Montserrat Alternates', sans-serif; }
@@ -40,6 +42,8 @@ article .textdesc.mouse,article .textlightbox.mouse a { display: block; }
 article .textdesc.clicked,article .textclose.clicked a,article .textlightbox.clicked a { display: block; }
 article .textdesc.size { display: block; }
 article .textclose.size a,article .textlightbox.size a { display: none; }
+
+.nextpage,.rov { clear: both; }
 
 footer { text-align: center; margin-bottom: 15px; font-family: 'Allan', cursive; }
 footer a { color: #000; font-weight: bold; font-family: 'Allan', cursive; }
