--- a/dev/main.css
+++ b/dev/main.css
@@ -22,7 +22,7 @@ article .content img:first-child { width: 100%; min-height: 275px; height: 100%;
 .nextpage a { width: 65px; color: #fff; background: rgba(0,0,0,0.75); padding: 0px 2.5px; border-radius: 5px; margin: 0px auto; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; position: relative; top: -15px; display: block; }
 
 article .desc { position: absolute; bottom: 5px; width: 100%; height: 100%; padding-right: 10px; border-radius: 5px; text-align: center; font-weight: bold; font-family: 'Montserrat Alternates', sans-serif; }
-article .textdesc { display: none; color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; margin: 0px; position: absolute; bottom: 0px; padding-right: 10px; }
+article .textdesc { display: none; color: rgba(255,255,255,1); background: rgba(0,0,0,0.5); background-clip: content-box; margin: 0px; position: absolute; bottom: 0px; padding-right: 10px; width: 100%; }
 article .textclose a { display: none; position: absolute; bottom: -20px; right: 10px; color: #fff; background: rgba(0,0,0,0.75); border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 0px 5px; font-family: 'Montserrat Alternates', sans-serif; }
 article .textlightbox a { display: none; bottom: -25px; position: absolute; background: rgba(0,0,0,0.75); border-top-color: rgba(0,0,0,0); border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 5px 5px 0px 5px; color: #fff; text-decoration: none; }
 
